feat(swagger): supported BearerToken auth
