# internal/handler/swagger/appapi_docs.go
@@ -1,4 +1,4 @@
-// Package swagger Code generated by swaggo/swag at 2023-10-17 11:12:51.8960124 +0800 CST m=+3.570132501. DO NOT EDIT
+// Package swagger Code generated by swaggo/swag at 2023-10-17 12:56:21.6804682 +0800 CST m=+2.779276701. DO NOT EDIT
 package swagger
 
 import "github.com/swaggo/swag"
@@ -101,6 +101,11 @@ const docTemplateappapi = `{
         },
         "/auth/logout": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "user logout",
                 "consumes": [
                     "application/json"
@@ -669,6 +674,13 @@ const docTemplateappapi = `{
                     "example": "jack"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }`
